...
@implementation TPPLibraryNavigationController

#ifdef SIMPLYE
- (void)setNavigationLeftBarButtonForVC:(UIViewController *)vc
{
  vc.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc]
                                         initWithImage:[UIImage imageNamed:@"MyLibraryIcon"] style:(UIBarButtonItemStylePlain)
                                         target:self
                                         action:@selector(switchLibrary)];;
  vc.navigationItem.leftBarButtonItem.accessibilityLabel = NSLocalizedString(@"librarySwitchButton", nil);
}

- (void)switchLibrary
...
